add_subdirectory(io)  # special CMakeListst.txt
add_subdirectory(sql)
add_subdirectory(xml)
if(xml)
  add_subdirectory(xmlparser)
endif()
if(castor)
  add_subdirectory(castor)
endif()
if(rfio)
  add_subdirectory(rfio)
endif()
if(gfal)
  add_subdirectory(gfal)
endif()
if(dcache)
  add_subdirectory(dcache)
endif()
if(hdfs)
  add_subdirectory(hdfs)
endif()
